@@ -276,6 +276,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17529) rvend ignored when rvstartid is specified
 * (bug 17626) Added uiprop=email to list=userinfo
 * (bug 13209) Added rvdiffto parameter to prop=revisions
+* Manual language conversion improve: Now we can include both ";" and ":" in
+  conversion rules
 
 === Languages updated in 1.15 ===
 
